outputs/main/hsevo_bpp_online_2025-07-25_06-01-17/problem_iter11_response3.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 33
    utilization_priority = np.where	utilization_priority > utilization_threshold, utilization_threshold, utilization_priority)
                                                                                                                             ^
SyntaxError: unmatched ')'
25
2
823.5700269106578
78.75938249541407
348
